# my_AI_lab

./: .coverage  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci_cd.yml
agents/: __init__.py  base_agent.py
data/: dataset.py
models/: model_factory.py  model_wrappers.py
my_ai_lib/: __init__.py  main.py
my_ai_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
my_ai_lib/agents/: custom_agent.py  ml_agent.py  rl_agent.py
my_ai_lib/config/: config.yaml
my_ai_lib/data/: dataset.py  preprocess.py
my_ai_lib/models/: model_factory.py
my_ai_lib/my_ai_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
my_ai_lib/utils/: callbacks.py
tests/: test_agents.py  test_data.py  test_main.py  test_models.py
utils/: decorators.py
