[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_ai_lib"
version = "0.1.0"
description = "A modular AI framework with agents, models, and utilities."
authors = [
    { name="Fernando Martínez Marco", email="fmmarco29@hotmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "flake8",
    "build",
    "twine"
]

[tool.setuptools.packages.find]
where = ["my_ai_lib"]

[tool.setuptools]
package-dir = {"" = "my_ai_lib"}

[tool.setuptools.dynamic]
version = {attr = "my_ai_lib.__version__"}
