[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_ai_lib"
version = "0.1.0"
description = "A professional AI library for testing and experiments"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    # Agrega otras dependencias necesarias para tu proyecto
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=my_ai_lib --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["my_ai_lib"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.isort]
profile = "black"
